[tool.poetry]
name = "docker-run-jupyter-cell"
version = "0.1.0"
description = ""
authors = ["Arseniy Shchepetnov <a.shchepetnov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.4.3"

[tool.poetry.dev-dependencies]
mypy = "^0.961"
autopep8 = "^1.6.0"
pytest = "^7.1.2"
pylint = "^2.14.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
